<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">IT-News</string>
    <string name="app_tittle" translatable="false"></string>
    <string name="search_hint">Поиск&#8230;</string>
    <string name="search_none">Ничего не найдено!</string>
    <string name="logo_hint">*Изображение It-News*</string>
    <string name="search_title">Поиск</string>
    <string name="reload_title">Перезагрузка</string>
    <string name="error_text">Простите, в данный момент сервер <b>недоступен</b>! Проверьте интернет-соединение и обновите страницу или попробуйте зайти позже!</string>
    <string name="error_bookmarks">Вы не добавили ничего в <b>"Закладки"</b>! Вы можете сделать это нажав на <i>*Звездочку*</i> в понравившейся вам статье!</string>

    <!--   Блок текста для NavigationView     -->
    <string name="menu_item_log_in">Войти</string>
    <string name="menu_item_register">Регистрация</string>
    <string name="menu_item_log_out">Выйти</string>
    <string name="menu_item_bookmarks">Закладки</string>
    <string name="menu_item_news">Новости</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_exit">Выход</string>
    <string name="view_navigation_open">Открыть</string>
    <string name="view_navigation_close">Закрыть</string>
    <string name="navigation_header_description">*Фоновое изображение*</string>
    <string name="navigation_avatar_description">*Изображение аватара*</string>

    <!--   Блок текста для Статьи     -->
    <string name="state_image_description">*Главное изображение статьи*</string>
    <string name="state_star_description">*Иконка звезды*</string>
    <string name="state_comment_description">*Иконка комментария*</string>
    <string name="test_header" translatable="false"><i>Тестовый заголовок! Lorem ipsum dolor adipiscing elit.</i></string>
    <string name="test_text" translatable="false">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову.  Над столом, где были разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку.</string>
    <string name="test_date" translatable="false">14:23  24.09.17</string>
    <string name="test_rate" translatable="false">128</string>
    <string name="test_number_comments" translatable="false">5</string>

    <string name="state_comment">Текст комментария &#8230;</string>
    <string name="state_comment_null">Комментариев нет &#8230;</string>
    <string name="state_comment_count">Все комментарии</string>
    <string name="test_user_name" translatable="false">Langipard</string>
    <string name="test_user_comment" translatable="false">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. nascetur ridiculus mus.</string>

    <!--   Блок текста для Настроек     -->
    <string name="setting_text_language">Язык приложения:</string>
    <string-array name="languageList">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string name="setting_text_theme">Тема приложения:</string>
    <string-array name="themeList">
        <item>Светлая</item>
        <item>Тёмная</item>
        <item>Синяя</item>
    </string-array>
    <string name="setting_version">Текущая версия: 0.3 (Beta)</string>
    <string name="setting_info_button">*Написать нам*</string>
    <string name="setting_info_email_header">Сообщение от пользователя</string>
    <string name="setting_info_email_text">Здравствуйте тех. поддержка IT-News! Я пишу по поводу &#8230;</string>
    <string name="setting_info">Данное пиложение было создано\n в рамках курсового проекта по дисциплине \"Компьютерные сети\".\n Студентами групы КИ-151:\n Прядка В. В. и Рожнятовская Д. Д.</string>

    <!--   Блок текста для Логина     -->
    <string name="log_info">Вход в аккаунт</string>
    <string name="log_image_description">*Таинственный знак*</string>
    <string name="log_login">Ваш Email</string>
    <string name="log_password">Ваш Пароль</string>
    <string name="log_check">Сохранить ваш пароль?</string>
    <string name="log_button">Войти</string>
    <string name="log_success">Добро пожаловать</string>
    <string name="log_error_login">Не правильный логин!</string>
    <string name="log_error_password">Не правильный пароль!</string>
    <string name="log_error_connection">Проверьте интернет соединение!</string>
    <string name="log_error">Не удалось войти!</string>
    <string name="log_waiting">Происходит вход в аккаунт.. Подождите..</string>

    <!--   Блок текста для Регистрации     -->
    <string name="reg_info">Регистрация аккаунта</string>
    <string name="reg_waiting">Происходит регистрация аккаунта.. Подожтите..</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="reg_login">Ваш Логин</string>
    <string name="reg_password">Подтвердите пароль</string>

    <string name="reg_login_error">Логин - минимум 5 симв.</string>
    <string name="reg_error">Ошибка регистрации!</string>
    <string name="reg_error_invalid_email">Не правильный email адрес!</string>
    <string name="reg_error_email">Email адрес занят!</string>
    <string name="reg_email_error">Email - минимум 8 симв.</string>
    <string name="reg_password_error_1">Пароль - минимум 8 симв.</string>
    <string name="reg_password_error_2">Пароли не совпадают!</string>
</resources>
