<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:paddingBottom="3dp">
    <android.support.v7.widget.CardView
        android:id="@+id/cardViewNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorMainBackgroundState">
            <ImageView
                android:id="@+id/small_state_image"
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:background="?attr/colorPrimaryDark"
                android:contentDescription="@string/state_image_description"
                android:src="?attr/imageDefaultImage" />
            <TextView
                android:id="@+id/small_state_header"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:textColor="?attr/colorText"
                style="@style/TextStyleMedium"
                android:text="@string/test_header" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/small_state_header"
                android:background="?attr/colorText"
                android:layout_marginBottom="3dp"
                android:layout_alignStart="@+id/small_state_header"
                android:layout_alignEnd="@+id/small_state_header" />
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_alignBottom="@id/small_state_image"
                android:layout_alignEnd="@+id/small_state_header"
                android:layout_alignStart="@+id/small_state_header">
                <TextView
                    android:id="@+id/small_state_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="?attr/colorText"
                    android:layout_weight="4"
                    style="@style/TextStyleSmall"
                    android:text="@string/test_date"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/state_star_description"
                    android:layout_weight="1"
                    android:src="@drawable/star" />
                <TextView
                    android:id="@+id/small_state_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="?attr/colorText"
                    android:layout_weight="2"
                    style="@style/TextStyleSmall"
                    android:textSize="13sp"
                    android:text="@string/test_rate" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/state_comment_description"
                    android:layout_weight="1"
                    android:src="@drawable/comment_multiple_outline" />
                <TextView
                    android:id="@+id/small_state_number_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="?attr/colorText"
                    android:layout_weight="2"
                    style="@style/TextStyleSmall"
                    android:textSize="13sp"
                    android:text="@string/test_number_comments" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
