<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorMainBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <ImageView
            android:id="@+id/state_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorTextNegative"
            android:contentDescription="@string/state_image_description"
            android:src="@drawable/unload_image" />
        <ImageButton
            android:id="@+id/state_star_like"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/state_star_description"
            android:background="@null"
            android:src="@drawable/star"/>
        <TextView
            android:id="@+id/state_rate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/state_star_like"
            style="@style/TextStyleBig"
            android:textColor="?attr/colorText"
            android:text="@string/test_rate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:paddingStart="10dp"
            android:paddingEnd="100dp"
            style="@style/TextStyleMedium"
            android:textColor="?attr/colorText"
            android:text="@string/test_date"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:fadeScrollbars="false"
        android:layout_gravity="top"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/state_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="?attr/colorText"
                android:text="@string/test_header"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?attr/colorText"
                    android:layout_marginBottom="3dp"/>
                <TextView
                    android:id="@+id/state_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    style="@style/TextStyleMedium"
                    android:text="@string/test_text"
                    android:textColor="?attr/colorText"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorMainBackgroundState"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp">
                <EditText
                    android:id="@+id/state_comment_field"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    style="@style/TextStyleBig"
                    android:drawableStart="@drawable/comment_multiple_outline"
                    android:hint="@string/state_comment"
                    android:textColorHighlight="?attr/colorText"
                    android:textColorHint="?attr/colorText"
                    android:inputType="text"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/state_comment_description"
                    android:background="@null"
                    android:src="@drawable/send"/>
            </LinearLayout>
            <include layout="@layout/comment_layout"/>
            <include layout="@layout/comment_layout"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>