<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorMainBackground"
    android:clickable="true">
    <TextView
        android:id="@+id/textView"
        style="@style/TextStyleExtraBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/colorText"
        android:padding="10dp"
        android:text="@string/reg_info"/>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:background="?attr/colorPrimary">
            <EditText
                android:id="@+id/reg_login"
                style="@style/TextStyleBig"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:hint="@string/reg_login"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/user_icon"
                android:scrollHorizontally="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:textColorHighlight="?attr/colorText"
                android:backgroundTint="?attr/colorText"
                android:textColorHint="?attr/colorText"
                android:inputType="text"/>
            <EditText
                android:id="@+id/reg_email"
                style="@style/TextStyleBig"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:hint="@string/log_login"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/email_outline"
                android:scrollHorizontally="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:textColorHighlight="?attr/colorText"
                android:backgroundTint="?attr/colorText"
                android:textColorHint="?attr/colorText"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/reg_password"
                style="@style/TextStyleBig"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:hint="@string/log_password"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/lock"
                android:scrollHorizontally="true"
                android:textColorHighlight="?attr/colorText"
                android:textColorHint="?attr/colorText"
                android:backgroundTint="?attr/colorText"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/reg_password_two"
                style="@style/TextStyleBig"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:hint="@string/reg_password"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/lock_reset"
                android:scrollHorizontally="true"
                android:textColorHighlight="?attr/colorText"
                android:textColorHint="?attr/colorText"
                android:backgroundTint="?attr/colorText"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:imeOptions="actionGo"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/button_register"
                android:textSize="20sp"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="?attr/colorText"
                android:background="@drawable/button_default"
                android:text="@string/reg_button"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/user_avatar_reg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/log_image_description"
            android:foregroundGravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/avatar_1"/>
    </RelativeLayout>
</LinearLayout>