<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewNews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="2dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorMainBackgroundState">
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:contentDescription="@string/navigation_avatar_description"
            android:src="@drawable/avatar_1"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyleMedium"
                android:textColor="?attr/colorText"
                android:text="@string/test_user_name"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorText"/>
            <TextView
                android:id="@+id/user_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyleSmall"
                android:textColor="?attr/colorText"
                android:text="@string/test_user_comment"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>